--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,7 @@
 
     <section class="hero" id="home">
         <div class="container">
+                <h1>LUAN AJEITA ISSO PELO AMOR DE DEUS HOME</h1>
             <div class="hero-content">
                 <h1>Transforme Sua Beleza com Cuidado Personalizado</h1>
                 <p>Descubra tratamentos exclusivos na Clínica Eloah Estética que realçam sua beleza natural e renovam sua confiança.</p>
