--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
                             <p>Presenteie sua rainha com uma experiência de spa luxuosa. Inclui Pele de Ryca (60 min) + Esfoliação Corporal com Hidratação e Drenagem Mape (60 min). Tratamentos de alto padrão para ela se sentir mimada e deslumbrante.</p>
                             <div class="promo-highlight" style="font-size: 1.8em; line-height:1.2;"><span style="text-decoration: line-through; font-size:0.7em; color: var(--text-light)">De R$ 699</span><br>Por R$ 499</div>
                             <a href="#contact" class="btn">Aproveitar Agora</a>
-                            <a href="https://wa.me/5519994046889?text=Olá! Quero informações sobre o Combo Apaixonados por Bem-Estar." target="_blank" class="btn-whatsapp"><i class="fab fa-whatsapp" aria-hidden="true"></i> Agendar via WhatsApp</a>
+                            <a href="https://wa.me/5519994046889?text=Olá! Quero informações sobre o Combo Experiência Premium." target="_blank" class="btn-whatsapp"><i class="fab fa-whatsapp" aria-hidden="true"></i> Agendar via WhatsApp</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
