--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Clínica Eloah Estética: tratamentos personalizados em Campinas para realçar sua beleza natural. Agende sua avaliação gratuita e descubra nossas promoções de Dia dos Namorados!">
+    <meta name="description" content="Clínica Eloah Estética: tratamentos personalizados em Campinas para realçar sua beleza natural. Agende sua avaliação comigo e descubra nossas promoções de Dia dos Namorados!">
     <meta name="author" content="Clínica Eloah Estética">
     <title>Clínica Eloah Estética - Transforme Sua Beleza em Campinas</title>
    
@@ -1096,7 +1096,7 @@
                 <h1>Transforme Sua Beleza com Cuidado Personalizado</h1>
                 <p>Descubra tratamentos exclusivos na Clínica Eloah Estética que realçam sua beleza natural e renovam sua confiança.</p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn">Agende Sua Avaliação Gratuita</a>
+                    <a href="#contact" class="btn">Agende Sua Avaliação</a>
                     <a href="#promotions" class="btn btn-secondary">Veja Nossas Ofertas</a>
                 </div>
             </div>
@@ -1495,7 +1495,7 @@
                                 <option value="Outra Promoção ou Serviço">Outra Promoção ou Serviço</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn" style="width: 100%;">Agendar Avaliação Gratuita</button>
+                        <button type="submit" class="btn" style="width: 100%;">Agendar Avaliação</button>
                     </form>
                 </div>
             </div>
@@ -1537,7 +1537,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/5519994046889?text=Olá! Quero agendar minha avaliação gratuita." class="whatsapp-float" target="_blank" aria-label="Contato rápido via WhatsApp">
+    <a href="https://wa.me/5519994046889?text=Olá! Quero agendar minha avaliação." class="whatsapp-float" target="_blank" aria-label="Contato rápido via WhatsApp">
         <i class="fab fa-whatsapp" aria-hidden="true"></i>
     </a>
    
@@ -1676,7 +1676,7 @@
                         return;
                     }
                    
-                    const message = `Olá! Gostaria de agendar uma avaliação ou obter informações.%0A%0A` +
+                    const message = `Olá! Gostaria de agendar uma avaliação e conhecer melhor o procedimento.%0A%0A` +
                                     `Nome: ${encodeURIComponent(name)}%0A` +
                                     `Email: ${encodeURIComponent(email)}%0A` +
                                     `Telefone: ${encodeURIComponent(phone)}%0A` +
